--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,17 @@
 body {
     background-image: url(../img/assets-cached.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
+    background-repeat: repeat;
+    background-position-x: center;
     position: absolute;
 }
 
 header {
     cursor: pointer;
-    filter: drop-shadow(0px 2px 1.5px rgb(62, 62, 62));
+    filter: drop-shadow(6px 0px 6px #000000);
     color: white;
     justify-content: center;
     text-align: center;
-    transform: translate(5%, 230%);
+    transform: translate(5%, 150%);
 }
 
 .one {
@@ -22,11 +22,12 @@ header {
 footer {
     text-align: center;
     color: rgb(255, 255, 255);
-    transform: translate(0%, 30%);
+    margin-top: -9%;
 }
 
 footer p {
-    transform: translate(5%, 490px);
+    padding: 4%;
+    transform: translate(5%, 520px);
 }
 
 a {
@@ -36,46 +37,46 @@ a {
 
 .info {
     color: white;
-    transform: translate(125%, 300px);
+    transform: translate(220%, 300px);
 }
 
 .info h2 {
-    font-size: 25px;
+    filter: drop-shadow(1px 0px 1px #979797);
+    font-size: 18px;
 }
 
 .info p {
     cursor: pointer;
     width: 100%;
-    height: 85%;
-    font-size: 120%;
-    background-color: rgba(0, 0, 0, 0.437);
-    backdrop-filter: blur(20px);
-    box-shadow: 0px 0px 6px rgba(255, 255, 255, 0.37);
+    height: 86%;
+    font-size: 100%;
+    backdrop-filter: blur(5px);
     border-radius: 8px;
-    border: 2px solid rgb(255, 255, 255);
+    border-bottom: 2px solid rgb(255, 255, 255);
+    border-top: 2px solid rgb(255, 255, 255);
     transform: translate(0%, 5%);
 }
 
 .info-2 {
     color: white;
-    transform: translate(335%, 290px);
+    transform: translate(390%, 300px);
 }
 
 .info-2 h2 {
+    filter: drop-shadow(1px 0px 1px #979797);
     transform: translate(6%);
-    font-size: 25px;
+    font-size: 18px;
 }
 
 .info-2 p {
     cursor: pointer;
     width: 115%;
     height: 87%;
-    font-size: 125%;
-    background-color: rgba(0, 0, 0, 0.437);
-    backdrop-filter: blur(20px);
-    box-shadow: 0px 0px 6px rgba(255, 255, 255, 0.37);
+    font-size: 99%;
+    backdrop-filter: blur(5px);
     border-radius: 8px;
-    border: 2px solid rgb(255, 255, 255);
+    border-bottom: 2px solid rgb(255, 255, 255);
+    border-top: 2px solid rgb(255, 255, 255);
     transform: translate(0%, 5%);
 }
 
@@ -87,41 +88,90 @@ a {
 }
 
 .forms img{
-    width: 55%;
+    width: 45%;
+    filter: drop-shadow(4px 0px 4px #000000);
     filter: drop-shadow(6px 6px px #000000);
-    transform: translate(-10%, -10%);
+    transform: translate(-10%, 280%);
     transition: transform 0.5s ease !important; /* Suaviza a transição do zoom */
 }
 
-.forms img:hover {
-    transform: scale(1.1) !important; /* Aplica o efeito de zoom */
-}
-
 .forms .conteiner-div-1 {
-    backdrop-filter: blur(1px);
     color: white;
-    box-shadow: +1px -1px 2px rgba(255, 255, 255, 0.37);
+    filter: drop-shadow(1px 0px 1px #979797);
     border-radius: 8px;
     border-right: 2px solid rgb(255, 255, 255);
     border-top: 2px solid rgb(255, 255, 255);
-    transform: translate(5%, -70%);
+    transform: translate(-65%, 391%);
 }
 
 .forms .conteiner-div {
-    backdrop-filter: blur(1px);
     color: white;
-    box-shadow: -1px +2px 2px rgba(255, 255, 255, 0.37);
+    filter: drop-shadow(1px 0px 1px #979797);
     border-radius: 8px;
     border-left: 2px solid rgb(255, 255, 255);
     border-bottom: 2px solid rgb(255, 255, 255);
-    transform: translate(-5%, 55%);
+    transform: translate(45%, +665%);
 }
 
 .forms span {
-    color: rgba(0, 0, 0, 0.827) !important;
+    color: rgb(173, 173, 173) !important;
 }
 
 .gym {
     width: 27%;
-    transform: translate(-60%, 60%);
+    transform: translate(-90%, 298%);
+}
+
+.part2 {
+    align-items: center;
+    text-align: center;
+    margin-top: 123%;
+    transform: translate(5%);
+}
+
+.part2 img {
+    width: 5%;
+    filter: drop-shadow(2px 0px 2px #ffffff);
+
+    transform: translate(0px, -48%);
+}
+
+.part2 h2 {
+    font-size: 150%;
+    color: rgb(231, 231, 231);
+    padding: 1%;
+}
+
+.part2 span {
+    color: #959595;
+}
+
+.part3 {
+    text-align: center;
+    margin-top: 30%;
+}
+
+.part3 img {
+    filter: drop-shadow(3px 3px 3px #000000);
+    width: 30%;
+    cursor: pointer;
+    transform: translate(15%, 20%);
+}
+
+.part3 h2 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
+    font-size: 220%;
+    transform: translate(+5%, 30%);
+}
+
+.part3 button {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #ffffff;
+    font-size: 120%;
+    width: 10%;
+    filter: drop-shadow(2px 0px 2px #ffffff);
+    color: rgb(0, 0, 0);
+    transform: translate(50%, 40%);
+    transition: transform 0.5s ease !important;
 }
